src/objects/NewRecords__c.object
<CustomObject>
    <description>This tab will contain all the information about new vendor company</description>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CompnyName__c</fullName>
        <description>This is the company name who is calling</description>
        <label>CompnyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>ContactNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactPerson__c</fullName>
        <description>It indicates the person name who called for positioin</description>
        <label>ContactPerson</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContactedDate__c</fullName>
        <description>This indicates the day I got call from company</description>
        <label>ContactedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EndClient__c</fullName>
        <description>Company who is looking for an employee</description>
        <label>EndClient</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobType__c</fullName>
        <label>JobType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FullTime</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Work/office phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Responce__c</fullName>
        <label>Responce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replied to Email</fullName>
                </value>
                <value>
                    <fullName>Initial call</fullName>
                </value>
                <value>
                    <fullName>Screening Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting For Interview</fullName>
                </value>
                <value>
                    <fullName>InterView Scheduled</fullName>
                </value>
                <value>
                    <fullName>Waiting For Result</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Got the Offer</fullName>
                </value>
                <value>
                    <fullName>Ignored - Budget Problems</fullName>
                </value>
                <value>
                    <fullName>Rate-Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearsofExperience__c</fullName>
        <label>YearsofExperience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NewOpportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NewRecords Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewOpportunity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>